IdentityServer/v7/docs/content/quickstarts/0_overview.md
---
title: "Overview"
description: "Quickstarts"
date: 2020-09-10T08:22:12+02:00
weight: 1
---

The quickstarts provide step-by-step instructions for various common Duende IdentityServer scenarios. They start with the absolute basics and become more complex - it is recommended you do them in order.

* adding Duende IdentityServer to an ASP.NET Core application
* configuring Duende IdentityServer
* issuing tokens for various clients
* securing web applications and APIs
* adding support for EntityFramework based configuration
* adding support for ASP.NET Identity

Every quickstart has a reference solution - you can find the code in the [samples]({{< param qs_base >}}) folder.

## Preparation
The first thing you should do is install our templates:

```
dotnet new install Duende.Templates
```

{{% notice note %}}
You may have a previous version of Duende templates (*Duende.IdentityServer.Templates*) installed on your machine.
Please uninstall the template package and install the latest version.
{{% /notice %}}


They will be used as a starting point for the various tutorials.

{{< youtube cxYmODQHErM >}}
